@@ -1,3 +1,6 @@
+11 February 2013: Wouter
+	- Fixup openssl_thread init code to only run if compiled with SSL.
+
 7 February 2013: Wouter
 	- detect endianness in lookup3 on BSD.
 	- add libunbound.ttl at end of result structure, version bump for
